x-okta-known-values support

--- a/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelInterface.mustache
@@ -33,9 +33,17 @@ public interface {{classname}} extends ExtensibleResource{{#parent}}, {{.}}{{/pa
     {{{datatypeWithEnum}}} {{getter}}();
 {{^vendorExtensions.x-is-read-only}}
 
+    {{#vendorExtensions.x-okta-known-values-exists}}
+    /**
+    * OKTA known values declared in @{{{vendorExtensions.x-okta-known-values-class-name}}}
+    */
+    {{/vendorExtensions.x-okta-known-values-exists}}
     {{classname}} {{setter}}({{{datatypeWithEnum}}} {{name}});
 {{/vendorExtensions.x-is-read-only}}
 
+{{#vendorExtensions.x-okta-known-values-exists}}
+    {{>modelKnownValues}}
+{{/vendorExtensions.x-okta-known-values-exists}}
 {{#isEnum}}
     {{^isContainer}}
 {{>modelInnerEnum}}
