--- a/swagger-templates/src/main/resources/OktaJava/modelKnownValues.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelKnownValues.mustache
@@ -14,7 +14,7 @@
     limitations under the License.
 }}
 /**
-* Okta Known Values for {{{nameInCamelCase}}}
+* Okta Known Values for '{{{name}}}' property
 */
 public static class {{#vendorExtensions.x-okta-known-values-class-name}}{{{.}}}{{/vendorExtensions.x-okta-known-values-class-name}} {
 
