TypeValues instead of TypeKnownValues remove comments

--- a/swagger-templates/src/main/resources/OktaJava/modelKnownValues.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelKnownValues.mustache
@@ -1,5 +1,5 @@
 {{!
-    Copyright 2017 Okta
+    Copyright 2021, Okta Inc.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -13,9 +13,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 }}
-/**
-* Okta Known Values for '{{{name}}}' property
-*/
+
 public static class {{#vendorExtensions.x-okta-known-values-class-name}}{{{.}}}{{/vendorExtensions.x-okta-known-values-class-name}} {
 
     {{#vendorExtensions.x-okta-known-values}}
