do not generate enum if x-okta-known-values exists small fix to line up the code

--- a/swagger-templates/src/main/resources/OktaJava/modelKnownValues.mustache
+++ b/swagger-templates/src/main/resources/OktaJava/modelKnownValues.mustache
@@ -14,10 +14,8 @@
     limitations under the License.
 }}
 
-public static class {{#vendorExtensions.x-okta-known-values-class-name}}{{{.}}}
-{{/vendorExtensions.x-okta-known-values-class-name}} {
-
-{{#vendorExtensions.x-okta-known-values}}
-    public static final String {{{.}}} = "{{{.}}}";
-{{/vendorExtensions.x-okta-known-values}}
-}
+    public static class {{#vendorExtensions.x-okta-known-values-class-name}}{{{.}}}{{/vendorExtensions.x-okta-known-values-class-name}} {
+        {{#vendorExtensions.x-okta-known-values}}
+        public static final String {{{.}}} = "{{{.}}}";
+        {{/vendorExtensions.x-okta-known-values}}
+    }
