--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
@@ -22,6 +22,10 @@
   {{/returnType}}
 {{/vendorExtensions.bodyIsSelf}}
 {{^vendorExtensions.bodyIsSelf}}
+    {{#vendorExtensions.forceToCreateObject}}
+        return getDataStore().create(href, {{bodyParam.paramName}}, null, {{{vendorExtensions.resourceReturnType}}}.class);
+    {{/vendorExtensions.forceToCreateObject}}
+    {{^vendorExtensions.forceToCreateObject}}
     {{#bodyParam}}
         getDataStore().save(href, {{bodyParam.paramName}}, this, queryArgs, headers);
         {{#returnType}}return {{/returnType}} {{bodyParam.paramName}};
@@ -32,4 +36,5 @@
         return this;
       {{/returnType}}
     {{/bodyParam}}
+    {{/vendorExtensions.forceToCreateObject}}
 {{/vendorExtensions.bodyIsSelf}}
