OKTA-438833: Upgrade to OpenAPI Spec 2.9.2 (#670)
* ITs created

* Group updated

* v2.9.1

* BrandAPI ITs updated

* updates

* added more ITs

* disabled basicBrandThemeTest IT due to issue with codegen

* added code comment

Co-authored-by: Sergii Shamrai <71881713+sergiishamrai-okta@users.noreply.github.com>

--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
@@ -22,14 +22,19 @@
   {{/returnType}}
 {{/vendorExtensions.bodyIsSelf}}
 {{^vendorExtensions.bodyIsSelf}}
-  {{#bodyParam}}
+    {{#vendorExtensions.forceToCreateObject}}
+        return getDataStore().create(href, {{bodyParam.paramName}}, null, {{{vendorExtensions.resourceReturnType}}}.class);
+    {{/vendorExtensions.forceToCreateObject}}
+    {{^vendorExtensions.forceToCreateObject}}
+    {{#bodyParam}}
         getDataStore().save(href, {{bodyParam.paramName}}, this, queryArgs, headers);
         {{#returnType}}return {{/returnType}} {{bodyParam.paramName}};
-  {{/bodyParam}}
-  {{^bodyParam}}
+    {{/bodyParam}}
+    {{^bodyParam}}
         getDataStore().save(href, new DefaultVoidResource(getDataStore()), this, queryArgs, headers);
-    {{#returnType}}
+      {{#returnType}}
         return this;
-    {{/returnType}}
-  {{/bodyParam}}
+      {{/returnType}}
+    {{/bodyParam}}
+    {{/vendorExtensions.forceToCreateObject}}
 {{/vendorExtensions.bodyIsSelf}}
