--- a/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/apiMethodPut.mustache
@@ -22,14 +22,20 @@
   {{/returnType}}
 {{/vendorExtensions.bodyIsSelf}}
 {{^vendorExtensions.bodyIsSelf}}
+    // {{{vendorExtensions}}}
+  {{#vendorExtensions.forceToCreateObject}}
+        return getDataStore().create(href, {{bodyParam.paramName}}, null, {{{vendorExtensions.resourceReturnType}}}.class);
+  {{/vendorExtensions.forceToCreateObject}}
+  {{^vendorExtensions.forceToCreateObject}}
   {{#bodyParam}}
         getDataStore().save(href, {{bodyParam.paramName}}, this, queryArgs, headers);
         {{#returnType}}return {{bodyParam.paramName}}; {{/returnType}}
   {{/bodyParam}}
   {{^bodyParam}}
         getDataStore().save(href, new DefaultVoidResource(getDataStore()), this, queryArgs, headers);
-    {{#returnType}}
+  {{#returnType}}
         return this;
-    {{/returnType}}
+  {{/returnType}}
   {{/bodyParam}}
+  {{/vendorExtensions.forceToCreateObject}}
 {{/vendorExtensions.bodyIsSelf}}
