support methods with return type void in the Client class

--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -23,6 +23,7 @@ import com.okta.commons.http.config.Proxy;
 import com.okta.commons.http.QueryString;
 import com.okta.commons.http.HttpHeaders;
 import com.okta.sdk.impl.config.ClientConfiguration;
+import com.okta.sdk.resource.VoidResource;
 
 {{#imports}}import {{import}};
 {{/imports}}
