--- a/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/api.mustache
@@ -29,8 +29,10 @@ import com.okta.sdk.resource.VoidResource;
 {{/imports}}
 import com.okta.sdk.impl.ds.InternalDataStore;
 import com.okta.sdk.impl.resource.DefaultVoidResource;
+import com.okta.sdk.impl.resource.DefaultInputStreamResource;
 
 import java.util.LinkedHashMap;
+import java.io.InputStream;
 {{^fullJavaUtil}}
 import java.util.ArrayList;
 import java.util.HashMap;
