updates - few parts in spec commented out - will revert back later

--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -22,6 +22,11 @@ import com.okta.commons.http.QueryString;
 import com.okta.commons.http.HttpHeaders;
 
 {{! TODO: add these programatically when needed }}
+import com.okta.sdk.impl.resource.common.*;
+import com.okta.sdk.impl.resource.policy.*;
+import com.okta.sdk.impl.resource.application.*;
+import com.okta.sdk.impl.resource.user.*;
+import com.okta.sdk.impl.resource.user.factor.*;
 import com.okta.sdk.impl.resource.BooleanProperty;
 import com.okta.sdk.impl.resource.IntegerProperty;
 import com.okta.sdk.impl.resource.DoubleProperty;
