--- a/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
+++ b/swagger-templates/src/main/resources/OktaJavaImpl/modelImpl.mustache
@@ -29,6 +29,7 @@ import com.okta.sdk.impl.resource.user.*;
 import com.okta.sdk.impl.resource.user.factor.*;
 import com.okta.sdk.impl.resource.brand.*;
 import com.okta.sdk.impl.resource.authorization.server.*;
+import com.okta.sdk.resource.c.ap.tc.ha.*;
 import com.okta.sdk.impl.resource.BooleanProperty;
 import com.okta.sdk.impl.resource.IntegerProperty;
 import com.okta.sdk.impl.resource.DoubleProperty;
