wip - dev commit

--- a/api/src/main/resources/custom_templates/pojo.mustache
+++ b/api/src/main/resources/custom_templates/pojo.mustache
@@ -14,7 +14,7 @@
         @JsonTypeName("{{name}}")
     {{/isClassnameSanitized}}
 {{/jackson}}
-{{>additionalModelTypeAnnotations}}{{>generatedAnnotation}}{{#discriminator}}{{>typeInfoAnnotation}}{{/discriminator}}{{>xmlAnnotation}}
+{{>additionalModelTypeAnnotations}}{{>generatedAnnotation}}{{>xmlAnnotation}}
 {{#vendorExtensions.x-class-extra-annotation}}
     {{{vendorExtensions.x-class-extra-annotation}}}
 {{/vendorExtensions.x-class-extra-annotation}}
