--- a/api/src/main/resources/custom_templates/api.mustache
+++ b/api/src/main/resources/custom_templates/api.mustache
@@ -6,11 +6,16 @@ import {{invokerPackage}}.ApiClient;
 {{/imports}}
 
 {{^fullJavaUtil}}import java.util.Collections;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
+import java.util.LinkedHashMap;
 import java.util.stream.Collectors;{{/fullJavaUtil}}
+
+import com.okta.sdk.resource.common.PagedList;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
@@ -151,6 +156,110 @@ import org.springframework.http.ResponseEntity;
         {{#returnType}}ParameterizedTypeReference<{{{returnType}}}> localReturnType = new ParameterizedTypeReference<{{{returnType}}}>() {};{{/returnType}}{{^returnType}}ParameterizedTypeReference<Void> localReturnType = new ParameterizedTypeReference<Void>() {};{{/returnType}}
             return apiClient.invokeAPI("{{{path}}}", HttpMethod.{{httpMethod}}, {{#hasPathParams}}uriVariables{{/hasPathParams}}{{^hasPathParams}}Collections.<String, Object>emptyMap(){{/hasPathParams}}, localVarQueryParams, localVarPostBody, localVarHeaderParams, localVarCookieParams, localVarFormParams, localVarAccept, localVarContentType, localVarAuthNames, localReturnType);
             }
+
+
+
+        {{#returnType}}
+
+            /**
+            * {{summary}}
+            * {{notes}}
+        {{#responses}}
+                * <p><b>{{code}}</b>{{#message}} - {{.}}{{/message}}
+        {{/responses}}
+        {{#allParams}}
+                * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{.}}{{/defaultValue}}){{/required}}
+        {{/allParams}}
+            * @return ResponseEntity&lt;{{returnType}}{{^returnType}}Void{{/returnType}}&gt;
+            * @throws RestClientException if an error occurs while attempting to invoke the API
+        {{#externalDocs}}
+                * {{description}}
+                * @see <a href="{{url}}">{{summary}} Documentation</a>
+        {{/externalDocs}}
+        {{#isDeprecated}}
+                * @deprecated
+        {{/isDeprecated}}
+            */
+        {{#isDeprecated}}
+                @Deprecated
+        {{/isDeprecated}}
+            public {{#returnType}}PagedList{{/returnType}}{{^returnType}}void{{/returnType}} {{operationId}}WithPaginationInfo({{#allParams}}{{#isFile}}{{#useAbstractionForFiles}}{{#collectionFormat}}java.util.Collection<org.springframework.core.io.Resource>{{/collectionFormat}}{{^collectionFormat}}org.springframework.core.io.Resource{{/collectionFormat}}{{/useAbstractionForFiles}}{{^useAbstractionForFiles}}{{{dataType}}}{{/useAbstractionForFiles}}{{/isFile}}{{^isFile}}{{{dataType}}}{{/isFile}} {{paramName}}{{^-last}}, {{/-last}}{{/allParams}}) throws RestClientException {
+            Object localVarPostBody = {{#bodyParam}}{{paramName}}{{/bodyParam}}{{^bodyParam}}null{{/bodyParam}};
+        {{#allParams}}{{#required}}
+                // verify the required parameter '{{paramName}}' is set
+                if ({{paramName}} == null) {
+                throw new HttpClientErrorException(HttpStatus.BAD_REQUEST, "Missing the required parameter '{{paramName}}' when calling {{operationId}}");
+                }
+        {{/required}}{{/allParams}}{{#hasPathParams}}
+                // create path and map variables
+                final Map<String, Object> uriVariables = new HashMap<String, Object>();{{#pathParams}}
+                    uriVariables.put("{{baseName}}", {{#collectionFormat}}apiClient.collectionPathParameterToString(ApiClient.CollectionFormat.valueOf("{{{collectionFormat}}}".toUpperCase()), {{{paramName}}}){{/collectionFormat}}{{^collectionFormat}}{{{paramName}}}{{/collectionFormat}});{{/pathParams}}{{/hasPathParams}}
+
+            final MultiValueMap<String, String> localVarQueryParams = new LinkedMultiValueMap<String, String>();
+            final HttpHeaders localVarHeaderParams = new HttpHeaders();
+            final MultiValueMap<String, String> localVarCookieParams = new LinkedMultiValueMap<String, String>();
+            final MultiValueMap<String, Object> localVarFormParams = new LinkedMultiValueMap<String, Object>();{{#hasQueryParams}}
+
+            {{#queryParams}}localVarQueryParams.putAll(apiClient.parameterToMultiValueMap({{#collectionFormat}}ApiClient.CollectionFormat.valueOf("{{{.}}}".toUpperCase(Locale.ROOT)){{/collectionFormat}}{{^collectionFormat}}null{{/collectionFormat}}, "{{baseName}}", {{paramName}}));{{^-last}}
+            {{/-last}}{{/queryParams}}{{/hasQueryParams}}{{#hasHeaderParams}}
+
+            {{#headerParams}}if ({{paramName}} != null)
+                localVarHeaderParams.add("{{baseName}}", apiClient.parameterToString({{paramName}}));{{^-last}}
+            {{/-last}}{{/headerParams}}{{/hasHeaderParams}}{{#hasCookieParams}}
+
+            {{#cookieParams}}if ({{paramName}} != null)
+                localVarCookieParams.add("{{baseName}}", apiClient.parameterToString({{paramName}}));{{^-last}}
+            {{/-last}}{{/cookieParams}}{{/hasCookieParams}}{{#hasFormParams}}
+
+            {{#formParams}}if ({{paramName}} != null)
+                localVarFormParams.{{^collectionFormat}}add{{/collectionFormat}}{{#collectionFormat}}addAll{{/collectionFormat}}("{{baseName}}", {{#isFile}}{{^collectionFormat}}{{#useAbstractionForFiles}}{{paramName}}{{/useAbstractionForFiles}}{{^useAbstractionForFiles}}new FileSystemResource({{paramName}}){{/useAbstractionForFiles}}{{/collectionFormat}}{{/isFile}}{{#isFile}}{{#collectionFormat}}{{paramName}}.stream(){{^useAbstractionForFiles}}.map(FileSystemResource::new){{/useAbstractionForFiles}}.collect(Collectors.toList()){{/collectionFormat}}{{/isFile}}{{^isFile}}{{paramName}}{{/isFile}});{{^-last}}
+            {{/-last}}{{/formParams}}{{/hasFormParams}}
+
+            final String[] localVarAccepts = { {{#hasProduces}}
+            {{#produces}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/produces}}
+        {{/hasProduces}} };
+            final List<MediaType> localVarAccept = apiClient.selectHeaderAccept(localVarAccepts);
+            final String[] localVarContentTypes = { {{#hasConsumes}}
+            {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}}
+        {{/hasConsumes}} };
+            final MediaType localVarContentType = apiClient.selectHeaderContentType(localVarContentTypes);
+
+            String[] localVarAuthNames = new String[] { {{#authMethods}}"{{name}}"{{^-last}}, {{/-last}}{{/authMethods}} };
+
+        {{#returnType}}ParameterizedTypeReference<{{{returnType}}}> localReturnType = new ParameterizedTypeReference<{{{returnType}}}>() {};{{/returnType}}{{^returnType}}ParameterizedTypeReference<Void> localReturnType = new ParameterizedTypeReference<Void>() {};{{/returnType}}
+            ResponseEntity<{{#returnType}}{{{returnType}}}{{/returnType}}{{^returnType}}Void{{/returnType}}> responseEntity = apiClient.invokeAPI("{{{path}}}", HttpMethod.{{httpMethod}}, {{#hasPathParams}}uriVariables{{/hasPathParams}}{{^hasPathParams}}Collections.<String, Object>emptyMap(){{/hasPathParams}}, localVarQueryParams, localVarPostBody, localVarHeaderParams, localVarCookieParams, localVarFormParams, localVarAccept, localVarContentType, localVarAuthNames, localReturnType);
+            {{#returnType}}
+                    HttpHeaders headers = responseEntity.getHeaders();
+                    PagedList pagedList = new PagedList();
+                    List<String> linkHeaders = headers.get("link");
+                    String self = null, nextPage = null;
+                    for (String link : linkHeaders) {
+                    if (link.contains("next")) {
+                    nextPage = link.split(";")[0]
+                    .replaceAll("<", "")
+                    .replaceAll(">", "");
+                    }
+                    if (link.contains("self")) {
+                    self = link.split(";")[0]
+                    .replaceAll("<", "")
+                    .replaceAll(">", "");
+                    }
+                    }
+                    pagedList.addItems(Arrays.asList(responseEntity.getBody()));
+                    if (Objects.nonNull(nextPage)) {
+                    pagedList.setNextPage(nextPage);
+                    }
+                    if (Objects.nonNull(self)) {
+                    pagedList.setSelf(self);
+                    }
+                    return pagedList;
+            {{/returnType}}
+            {{^returnType}}
+                return;
+            {{/returnType}}
+        }
+    {{/returnType}}
+
     {{/operation}}
         }
 {{/operations}}
