--- a/api/src/main/resources/custom_templates/apiClient.mustache
+++ b/api/src/main/resources/custom_templates/apiClient.mustache
@@ -48,6 +48,7 @@ import org.springframework.util.MultiValueMap;
 import org.springframework.util.StringUtils;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
+import org.springframework.retry.support.RetryTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 import org.springframework.web.util.DefaultUriBuilderFactory;
 {{#openApiNullable}}
@@ -126,18 +127,22 @@ private String basePath = "{{basePath}}";
 
 private RestTemplate restTemplate;
 
+private RetryTemplate retryTemplate;
+
 private Map<String, Authentication> authentications;
 
 private DateFormat dateFormat;
 
 public ApiClient() {
 this.restTemplate = buildRestTemplate();
+this.retryTemplate = buildRetryTemplate();
 init();
 }
 
 @Autowired
-public ApiClient(RestTemplate restTemplate) {
+public ApiClient(RestTemplate restTemplate, RetryTemplate retryTemplate) {
 this.restTemplate = restTemplate;
+this.retryTemplate = retryTemplate;
 init();
 }
 
@@ -731,7 +736,7 @@ List<ClientHttpRequestInterceptor> currentInterceptors = this.restTemplate.getIn
 
                             RequestEntity<Object> requestEntity = requestBuilder.body(selectBody(body, formParams, contentType));
 
-                                ResponseEntity<T> responseEntity = restTemplate.exchange(requestEntity, returnType);
+                            ResponseEntity<T> responseEntity = retryTemplate.execute(context ->restTemplate.exchange(requestEntity, returnType));
 
                                     if (responseEntity.getStatusCode().is2xxSuccessful()) {
                                     return responseEntity;
@@ -811,6 +816,10 @@ List<ClientHttpRequestInterceptor> currentInterceptors = this.restTemplate.getIn
                                                 uriBuilderFactory.setEncodingMode(DefaultUriBuilderFactory.EncodingMode.VALUES_ONLY);
                                                 restTemplate.setUriTemplateHandler(uriBuilderFactory);
                                                 return restTemplate;
+                                                }
+
+                                                protected RetryTemplate buildRetryTemplate() {
+                                                return new RetryTemplate();
                                                 }
 
                                                 /**
