--- a/api/src/main/resources/custom_templates/apiClient.mustache
+++ b/api/src/main/resources/custom_templates/apiClient.mustache
@@ -85,6 +85,7 @@ import java.util.stream.Collectors;
 {{/jsr310}}
 
 import com.okta.commons.lang.ApplicationInfo;
+import com.okta.sdk.error.ResourceException;
 import com.okta.sdk.error.RetryableException;
 import org.springframework.retry.backoff.FixedBackOffPolicy;
 
@@ -829,6 +830,7 @@ List<ClientHttpRequestInterceptor> currentInterceptors = this.restTemplate.getIn
                                                 protected RetryTemplate buildRetryTemplate() {
                                                 Map<Class<? extends Throwable>, Boolean> retryableExceptions = new HashMap<>();
                                                 retryableExceptions.put(RetryableException.class, Boolean.TRUE);
+                                                retryableExceptions.put(ResourceException.class, Boolean.TRUE); //TODO: remove this
 
                                                 SimpleRetryPolicy retryPolicy = new SimpleRetryPolicy(5, retryableExceptions); //TODO - get this from client config
                                                 FixedBackOffPolicy backOffPolicy = new FixedBackOffPolicy();
